# thermgraphpy

./: LICENSE  README.md  example.py  pyproject.toml  requirements.txt  st_app.py
src/: calibration.py  check_extraction.py  extract_data.py  select_roi.py  utils.py
